--- a/backup.html.md.erb
+++ b/backup.html.md.erb
@@ -15,7 +15,7 @@ verify that the current environment and the destination environment are compatib
 For information, see [Compatibility of Restore](./restore.html#compatibility).
 [//]: # (Need a link to the steps to perform to check the compatibility.)
 
-## <a id='back-up-director'></a> To Back Up a BOSH Director
+## <a id='back-up-director'></a> Back Up a BOSH Director
 
 Follow these steps to verify that your BOSH Director is reachable and can be backed up with BBR and then perform the backup.
 
@@ -70,14 +70,14 @@ Follow these steps to verify that your BOSH Director is reachable and can be bac
     </pre>
 
 5. If the backup command completes successfully,
-   follow the steps in [What To Do with Your Backup Artifact](#what-to-do-with-artifact) below.
+   follow the steps in [Good Practices for Managing Your Backup Artifact](#good-practice) below.
 
 6. If the backup command fails, do the following: 
    + Run the command again adding the `--debug` flag to enable debug logs.<br>
      For more information, see [Exit Codes and Logging](logging.html).
    + Follow the steps in [Recovering from a Failing Command](#recovering-from-failing-command).
 
-## <a id='back-up-deployment'></a> To Back Up a BOSH Deployment
+## <a id='back-up-deployment'></a> Back Up a BOSH Deployment
 
 Perform the following steps to check that your BOSH Director is reachable and has a deployment that can be backed up:
 
@@ -258,7 +258,7 @@ Follow the steps below to use the BBR cleanup script to tidy up after a failed b
 
 
 
-## <a id="what-to-do-with-artifact"></a>Good Practices for Managing Your Backup Artifact
+## <a id="good-practices"></a>Good Practices for Managing Your Backup Artifact
 
 Keep your backup artifact safe by following these steps:
 
