fixing smart quotes in cf-backup[#154559926]

--- a/cf-backup.html.md.erb
+++ b/cf-backup.html.md.erb
@@ -65,7 +65,7 @@ and by using a later version of `cf-deployment`.
     </td>
     <td><code>cf-deployment</code> v1.4.0 or later.<br>
         For how to verify that the blobstore supports Amazon S3 versioning,
-        see <a href=”external-blobstores.html”>Enabling an External Blobstore</a></code>.
+        see <a href="external-blobstores.html">Enabling an External Blobstore</a></code>.
      </td>
   </tr>
   <tr>
